# Discord-Bot-Frame-Work

./: README.md  main.py  pastbot.py  pyproject.toml
general/: cuses.txt
roles/: mods.txt
settings/: flagKeys.txt
